0.8.0/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/index.rst


.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer:

.. _examples-importer-index:

Import / Export
---------------

This section contains examples of how to import and export data
from/to various file formats.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we show the use of the generic read method to create dataset either from local or remote files.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_generic_read_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reading datasets</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we load an experimental SPG file (OMNIC) and plot it.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_IR_from_omnic_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_omnic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loading an IR (omnic SPG) experimental file</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we load an experimental Bruker OPUS files and plot it.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_IR_from_opus_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_opus.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loading Bruker OPUS files</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we load a NMR dataset (in the Bruker format) and plot it.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_nmr_from_bruker_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loading of experimental 1D NMR data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we load experimental LABSPEC spectra and plot them.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_raman_from_labspec_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_raman_from_labspec.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loading RAMAN experimental file</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The spectral data used has been downloaded from https://github.com/alchem0x2A/py-wdf-reader (MIT License) and stored in the local directory ramandata/wire.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_renishaw_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_renishaw.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reading Renishaw WiRE files</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_generic_read
   /gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_IR_from_omnic
   /gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_IR_from_opus
   /gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_nmr_from_bruker
   /gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_raman_from_labspec
   /gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_renishaw

